--- a/public/css/main1.css
+++ b/public/css/main1.css
@@ -118,6 +118,16 @@ body {
     background-color: rgb(218, 147, 6); 
 }
 
+.product__img{
+    width:70px !important;
+    height: 70px !important;
+    border-radius:50% !important;
+    object-fit:cover !important;
+    background-color: brown !important;
+    border: 1px solidb blue !important;
+}
+
+
 
 @media screen and (min-width: 1000px) {
     .container {
