--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -128,6 +128,15 @@
         margin-bottom: 18rem;}
 }
 
+.product__img{
+    width:70px;
+    height: 70px;
+    border-radius:50%;
+    object-fit:cover;
+    background-color: brown;
+    border: 1px solid blue($color: #000000);
+}
+
 
 
 @media screen and (min-width: 1000px) {
