--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,23 +1,51 @@
-<header>
-  <nav class="navbar bg-primary navbar-expand-lg">
-      <div class="container-fluid flex-row">
-        <a class="navbar-brand" href="#">Navbar</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/contact">Contacto</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/register">Register</a>
-            </li>
+    <!-- =================HEADER=================  -->
+    <header id="home" class="header">
+      <nav class="navbar">
+          <a href="/index.html" class="navbar__nav-link">
+              <img class="navbar__logo" src="/assets/images/logo1.abascay-sin fondo.png" alt="Logo del ecommerce">
+          </a>
+          <div class="user-navbar">
+              <a href="/pages/order/order.html" class="user-navbar__cart-icon-container">
+                  <i class="fa-solid fa-cart-shopping"></i>
+                  <div class="user-navbar__cart-badge" id="cart-count">0</div>
+              </a>
+              <div class="__cart-icon-container" >
+              </div>
+              <!-- <div class="use-navbar__avatar-container"> -->
+                      <div id="loginName" class="navbar__nav-link-login">
+                      </div>
+                      <div class="user-navbar__user-avatar-container">
+                              <!-- <i class="fa-solid fa-user loginLogo" class="user-navbar__user-avatar" alt="Imagen de usuario" id="loginLogo"></i> -->
+                              <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2c/Default_pfp.svg/100px-Default_pfp.svg.png" class="user-navbar__user-avatar" alt="Imagen de usuario">
+                      </div>
+              <!-- </div> -->
+
+              <!-- TODO: avatar de la persona logueada o nombre -->
+          </div>
+          
+          <input type="checkbox" class="navbar__menu-btn" id="menu-btn">
+
+          <label for="menu-btn" class="navbar__menu-label">
+              <span class="navbar__menu-icon"></span>
+          </label>
+          
+          <ul class="navbar__nav-links-container" id="navbar-list">
+              <li class="navbar__nav-item">
+                  <a href="/index.html" class="navbar__nav-link">Inicio</a>
+              </li>
+              <li class="navbar__nav-item">
+                  <a href="/pages/contact/contact.html" class="navbar__nav-link">Contacto</a>
+              </li>
+              <li class="navbar__nav-item">
+                  <a href="/pages/about-us/about-us.html" class="navbar__nav-link">Nosotros</a>
+              </li>
+              <li class="navbar__nav-item">
+                  <a href="/pages/register/register.html" class="navbar__nav-link" target="_self">Registro</a>
+              </li>
+              <li class="navbar__nav-item" id="sign-in">
+                  <a href="/pages/login/login.html" class="navbar__nav-link" target="_blank">Login</a>
+              </li>
           </ul>
-        </div>
-      </div>
-    </nav>
-</header>
+      </nav>
+      
+  </header>
