--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -31,19 +31,19 @@
           
           <ul class="navbar__nav-links-container" id="navbar-list">
               <li class="navbar__nav-item">
-                  <a href="/index.html" class="navbar__nav-link">Inicio</a>
+                  <a aria-current="page" href="/" class="navbar__nav-link">Inicio</a>
               </li>
               <li class="navbar__nav-item">
-                  <a href="/pages/contact/contact.html" class="navbar__nav-link">Contacto</a>
+                  <a href="/contact" class="navbar__nav-link">Contacto</a>
               </li>
               <li class="navbar__nav-item">
-                  <a href="/pages/about-us/about-us.html" class="navbar__nav-link">Nosotros</a>
+                  <a href="/about-us" class="navbar__nav-link">Nosotros</a>
               </li>
               <li class="navbar__nav-item">
-                  <a href="/pages/register/register.html" class="navbar__nav-link" target="_self">Registro</a>
+                  <a href="/register" class="navbar__nav-link" target="_self">Registro</a>
               </li>
               <li class="navbar__nav-item" id="sign-in">
-                  <a href="/pages/login/login.html" class="navbar__nav-link" target="_blank">Login</a>
+                  <a href="/login" class="navbar__nav-link" target="_blank">Login</a>
               </li>
           </ul>
       </nav>
