--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <%- include('partials/head', { tabTitle: "Contacto"}) %>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
 </head>
 <body>
-    
-    <%- include('partials/header') %>
-
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quo doloribus illo voluptatem perferendis cupiditate quaerat! Aut aspernatur debitis impedit laboriosam sit sapiente ducimus ea molestias, ut veniam dicta iusto placeat!</p>
-    <%- include('partials/footer') %>
-    
+    PROBANDO
 </body>
 </html>
