--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -37,7 +37,7 @@
                   <a href="/contact" class="navbar__nav-link">Contacto</a>
               </li>
               <li class="navbar__nav-item">
-                  <a href="/about-us" class="navbar__nav-link">Nosotros</a>
+                  <a href="/location" class="navbar__nav-link">Nosotros</a>
               </li>
               <li class="navbar__nav-item">
                   <a href="/register" class="navbar__nav-link" target="_self">Registro</a>
