--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -46,7 +46,7 @@
                     </a>
                 </li>
                 <li class="footer__contact-item">
-                    <a href="/pages/contact/location.html" class="footer__contact-link">
+                    <a href="/location" class="footer__contact-link">
                         <i class="fa-solid 
                         fa-location-dot 
                         footer__contact-icon--location"></i>
