--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-    <%- include('partials/head', { tabTitle: 'Principal' }) %>
+    <%- include('partials/head', { tabTitle: 'Home' }) %>
 
-    <body>
+<body>
 
-        <%- include('partials/header') %>
+    <%- include('partials/header') %>
 
             <!-- =================INFO=================  -->
 
