--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -38,13 +38,10 @@
                 <a href="/contact" class="navbar__nav-link">Contacto</a>
             </li>
             <li class="navbar__nav-item">
-                <a href="/contact2" class="navbar__nav-link">Contacto1</a>
-            </li>
-            <li class="navbar__nav-item">
                 <a href="/location" class="navbar__nav-link">Nosotros</a>
             </li>
             <li class="navbar__nav-item">
-                <a href="/register" class="navbar__nav-link" target="_self">Registro</a>
+                <a href="/contact" class="navbar__nav-link" target="_self">Registro</a>
             </li>
             <li class="navbar__nav-item" id="sign-in">
                 <a href="/login" class="navbar__nav-link" target="_blank">Login</a>
