--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -3,13 +3,13 @@
         <div class="footer__column">
             <ul class="footer__contact-container">
                 <li class="footer__contact-item"> 
-                    <a href="https://www.facebook.com/casacampo.abascay" class="footer__contact-link">
-                        <i class="fa-brands fa-facebook footer__contact-icon footer__contact-icon--facebook"></i>
+                    <a href="https://www.facebook.com/casacampo.abascay" class="footer__contact-link" target="_blank">
+                        <i class="fa-brands fa-facebook footer__contact-icon footer__contact-icon--facebook" ></i>
                         Facebook
                     </a>
                 </li>
                 <li class="footer__contact-item">
-                    <a href="https://www.instagram.com/elabascaybrandsen/" class="footer__contact-link">
+                    <a href="https://www.instagram.com/elabascaybrandsen/" class="footer__contact-link" target="_blank">
                         <i class="fa-brands fa-instagram 
                         footer__contact-icon
                         footer__contact-icon--instagram"></i>
@@ -17,7 +17,7 @@
                     </a>
                 </li>
                 <li class="footer__contact-item">
-                    <a href="https://www.linkedin.com/in/consuelo-maff%C3%ADa-a25853112/" class="footer__contact-link">
+                    <a href="https://www.linkedin.com/in/consuelo-maff%C3%ADa-a25853112/" class="footer__contact-link" target="_blank">
                         <i class="fa-brands fa-linkedin 
                         footer__contact-icon
                         footer__contact-icon--linkedin"></i>
@@ -27,9 +27,9 @@
             </ul>
         </div>
         <div class="footer__column">
-            <img src="/assets/images/abascay.png" alt="Company Logo" class="footer__logo" width="100">
+            <a aria-current="page" href="/"   class="footer__logo" ><img src="/assets/images/abascay.png" alt="Company Logo" class="footer__logo" width="100" ></a>
             <h2 class="footer__company-name">
-                @ELABASCAYBRANDSEN
+                <a href="https://www.instagram.com/elabascaybrandsen/" target="_blank" class="footer__linkIG"> @ELABASCAYBRANDSEN</a>
             </h2>
             <p class="footer__copyrigth">
                 Todos los derechos reservados al Abascay
@@ -38,7 +38,7 @@
         <div class="footer__column">
             <ul class="footer__contact-container">
                 <li class="footer__contact-item">
-                    <a href="tel:+5491156182673" class="footer__contact-link">
+                    <a href="tel:+5491156182673" class="footer__contact-link" target="_blank">
                         <i class="fa-solid 
                         fa-square-phone-flip 
                         footer__contact-icon--phone"></i>
@@ -46,7 +46,7 @@
                     </a>
                 </li>
                 <li class="footer__contact-item">
-                    <a href="/location" class="footer__contact-link">
+                    <a href="/location" class="footer__contact-link" target="_blank">
                         <i class="fa-solid 
                         fa-location-dot 
                         footer__contact-icon--location"></i>
@@ -54,7 +54,7 @@
                     </a>
                 </li>
                 <li class="footer__contact-item">
-                    <a href="mailto:holaabascay@gmail.com" class="footer__contact-link">
+                    <a href="mailto:holaabascay@gmail.com" class="footer__contact-link" target="_blank">
                     
                         
                         <i class="fa-solid 
@@ -63,15 +63,7 @@
                         Email
                     </a>
                 </li>
-                <li class="footer__contact-item">
-                    <a href="/index.html" class="footer__contact-link">
-                    
-                        <i class="fa-solid 
-                        fa-house-user
-                        footer__contact-icon--home"></i>
-                        Inicio
-                    </a>
-                </li>
+
 
             </ul>
         </div>
