--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,7 +5,7 @@
             <img class="navbar__logo" src="/assets/images/logo1.abascay-sin fondo.png" alt="Logo del ecommerce">
         </a>
         <div class="user-navbar">
-            <a href="/pages/order/order.html" class="user-navbar__cart-icon-container">
+            <a href="/order" class="user-navbar__cart-icon-container">
                 <i class="fa-solid fa-cart-shopping"></i>
                 <div class="user-navbar__cart-badge" id="cart-count">0</div>
             </a>
@@ -14,10 +14,10 @@
             <!-- <div class="use-navbar__avatar-container"> -->
             <div id="loginName" class="navbar__nav-link-login">
             </div>
-            <div class="user-navbar__user-avatar-container">
+           <div class="user-navbar__user-avatar-container">
                 <!-- <i class="fa-solid fa-user loginLogo" class="user-navbar__user-avatar" alt="Imagen de usuario" id="loginLogo"></i> -->
-                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2c/Default_pfp.svg/100px-Default_pfp.svg.png"
-                    class="user-navbar__user-avatar" alt="Imagen de usuario">
+                <a href="/login"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2c/Default_pfp.svg/100px-Default_pfp.svg.png"
+                    class="user-navbar__user-avatar" alt="Imagen de usuario"></a>
             </div>
             <!-- </div> -->
 
@@ -38,10 +38,10 @@
                 <a href="/contact" class="navbar__nav-link">Contacto</a>
             </li>
             <li class="navbar__nav-item">
-                <a href="/location" class="navbar__nav-link">Nosotros</a>
+                <a href="/about-us" class="navbar__nav-link">Nosotros</a>
             </li>
             <li class="navbar__nav-item">
-                <a href="/contact" class="navbar__nav-link" target="_self">Registro</a>
+                <a href="/register" class="navbar__nav-link" target="_self">Registro</a>
             </li>
             <li class="navbar__nav-item" id="sign-in">
                 <a href="/login" class="navbar__nav-link" target="_blank">Login</a>
