--- a/views/index.ejs
+++ b/views/index.ejs
@@ -68,6 +68,7 @@
                 <!-- AXIOS -->
                 <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
                 <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+                <script src="/js/products.js"></script>
                 <script src="/js/adminUser.js"></script>
                 <script src="/js//date.js"></script>
                 <script src="/js/header.js"></script>
