--- a/views/index.ejs
+++ b/views/index.ejs
@@ -46,6 +46,9 @@
 
             </select>
           </div>
+          <div class="input-box">
+            <input type="file" accept="image/*" name="file" required>
+        </div>
           <button type="submit" class="submit-btn" id="submit-btn">Cargar Producto</button>
         </form>
         <div class="table-container">
