--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,17 +20,22 @@
             <textarea name="description" id="descLabel" rows="5" required>
               </textarea>
           </div>
+          <div class="input-box">
+            <label for="descLabel">Detalle</label>
+            <textarea name="detail" id="descLabel" rows="5" required>
+              </textarea>
+          </div>
 
           <div class="input-box">
             <label for="priceLabel">Precio</label>
             <input type="number" name="price" id="priceLabel" required>
           </div>
 
-          <div class="input-box">
+          <!-- <div class="input-box">
             <label for="imgLabel">Imagen</label>
             <input type="url" name="file" id="imgLabel" required
               value="https://cloudfront-us-east-1.images.arcpublishing.com/infobae/TVULFPUK4VHBBPNHF2Z2WTFJPI.jpg">
-          </div>
+          </div> -->
 
           <div class="input-box">
             <label for="stockLabel">Stock</label>
@@ -41,7 +46,7 @@
             <input type="checkbox" name="joystick" id="joystickLabel">
           </div>
           <div class="input-box">
-            <select name="games" id="category">
+            <select name="category" id="category">
               <option value="" selected></option>
 
             </select>
