--- a/views/admin-product.ejs
+++ b/views/admin-product.ejs
@@ -84,6 +84,7 @@
                 </div>
 
                 <!-- =================JS=================  -->
+                <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
                 <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
                 <script src="/js/alert.js"></script>
                 <script src="/js/header.js"></script>
