--- a/views/admin-user.ejs
+++ b/views/admin-user.ejs
@@ -75,6 +75,7 @@
                 </div>
 
                 <!-- =================JS=================  -->
+                <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
                 <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
                 <script src="/js/alert.js"></script>
                 <script src="/js//date.js"></script>
