--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -65,6 +65,7 @@
 
                 <!-- =================JS=================  -->
 
+                <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
                 <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
                 <script src="/js/loginUserAvatar.js"></script>
                 <script src="/js/alert.js"></script>
