--- a/views/location.ejs
+++ b/views/location.ejs
@@ -31,6 +31,7 @@
                 </div>
 
                 <!-- =================JS=================  -->
+                <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
                 <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
                 <script src="/js/login.js"></script>
                 <script src="/js/alert.js"></script>
