--- a/views/order.ejs
+++ b/views/order.ejs
@@ -58,6 +58,7 @@
                 </div>
 
                 <!-- =================JS=================  -->
+                <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
                 <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
                 <script src="/js//date.js"></script>
                 <script src="/js/header.js"></script>
