--- a/views/product-detail.ejs
+++ b/views/product-detail.ejs
@@ -21,6 +21,7 @@
                 </div>
 
                 <!-- =================JS=================  -->
+                <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
                 <script src="/js/header.js"></script>
                 <script src="/js/alert.js"></script>
                 <script src="/js/index.js"></script>
