--- a/views/index.ejs
+++ b/views/index.ejs
@@ -69,7 +69,7 @@
                 <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
                 <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
                 <script src="/js/products.js"></script>
-                <script src="/js/adminUser.js"></script>
+                <!-- <script src="/js/adminUser.js"></script> -->
                 <script src="/js//date.js"></script>
                 <script src="/js/header.js"></script>
                 <script src="/js/alert.js"></script>
