--- a/views/login.ejs
+++ b/views/login.ejs
@@ -7,10 +7,11 @@
         <%- include('partials/header') %>
 
             <!-- =================INFO=================  -->
+<!-- onsubmit="loginUser(event)-->
             <main class="mainLogin">
                 <section class="register">
                     <h1 class="register__login">LOGIN</h1>
-                    <form class="register__form1" id="loginForm" onsubmit="loginUser(event)">
+                    <form class="register__form1" id="loginForm">
                         <div class="register__casillero">
                             <label for="email" class="register__text1">Email:</label>
                             <input type="email" placeholder="nombre@ejemplo.com" name="email" id="email"
