--- a/views/admin-product.ejs
+++ b/views/admin-product.ejs
@@ -8,11 +8,11 @@
 
             <!-- =================TITULO=================  -->
 
-            <div class="main">
+            <div class="main4">
                 <div class="adminContainer">
                     <h1 class="header1">ADMINISTRACION DE PRODUCTOS</h1>
                     <div class="container">
-                        <form id="add-product" class="product-form" onsubmit="addProduct(event)">
+                        <form id="add-product" class="product-form-admin" onsubmit="addProduct(event)">
                             <div class="input-box">
                                 <label for="nameLabel">Producto</label>
                                 <input type="text" name="name" id="nameLabel" required class="inputBox">
@@ -91,7 +91,7 @@
                 <script src="/js/products.js"></script>
                 <script src="/js/isAdmin.js"></script>
                 <script src="/js/cartUpdate.js"></script>
-                <script src="/js/loginUserAvatar.js"></script>>
+                <script src="/js/loginUserAvatar.js"></script>
 
 
 
