--- a/views/index.ejs
+++ b/views/index.ejs
@@ -68,17 +68,19 @@
                 <!-- AXIOS -->
                 <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
                 <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-                <script src="/js/products.js"></script>
+                <!-- <script src="/js/products.js"></script> -->
+                <!-- <script src="/js/product.js"></script> -->
                 <!-- <script src="/js/adminUser.js"></script> -->
                 <script src="/js//date.js"></script>
                 <script src="/js/header.js"></script>
                 <script src="/js/alert.js"></script>
-                <script src="/js/index.js"></script>
+                <script src="/js/indexProducts.js"></script>
+                <!-- <script src="/js/index.js"></script> -->
                 <script src="/js/loginUserAvatar.js"></script>
                 <script src="/js/filter.js"></script>
                 <script src="/js/btnBuy.js"></script>
                 <script src="/js/cartUpdate.js"></script>
-                <script src="/js//orderFinal.js"></script>
+                <!-- <script src="/js//orderFinal.js"></script> -->
     </body>
 
 </html>
