--- a/public/css/main.css
+++ b/public/css/main.css
@@ -373,7 +373,6 @@ body {
   background-color: rgb(168, 165, 165);
   justify-content: space-between;
   width: 100%;
-  position: absolute;
   bottom: 0;
   padding-right: 5rem;
 }
@@ -457,15 +456,25 @@ body {
   }
 }
 .main {
+  margin-top: 50rem;
+  flex-grow: 1;
   margin-top: 50px;
+  padding-bottom: 2rem;
   background-color: rgb(235, 234, 234);
-  padding-bottom: 11rem;
+  height: 100%;
+}
+
+body {
   min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .main4 {
+  margin-top: 50px;
   background-color: rgb(235, 234, 234);
-  padding-bottom: 0rem;
+  padding-bottom: 11rem;
   min-height: 100vh;
 }
 
@@ -628,10 +637,12 @@ body {
   }
 }
 .main2 {
+  margin-top: 50rem;
+  flex-grow: 1;
+  margin-top: 50px;
+  padding-bottom: 2rem;
   background-color: rgb(235, 234, 234);
-  min-height: 100vh;
-  min-height: 100vh;
-  padding-top: 50px;
+  height: 100%;
 }
 
 .formContact {
@@ -706,12 +717,11 @@ body {
   .Contact-Container {
     display: flex;
     flex-direction: column;
-    margin-bottom: 18rem;
+    margin-bottom: 10rem;
   }
   .main2 {
     background-color: rgb(235, 234, 234);
-    margin-top: 10px;
-    padding-bottom: 3rem;
+    margin-top: 50px;
   }
   .formContact {
     justify-content: center;
@@ -781,21 +791,24 @@ body {
 
 .main1 {
   display: flex;
-  background-color: #EBEAEA;
-  min-height: 100vh;
-  padding-bottom: 8rem;
+  flex-grow: 1;
+  margin-top: 50px;
+  background-color: rgb(235, 234, 234);
+  height: 100%;
 }
 
 .mainLogin {
   display: flex;
-  background-color: #EBEAEA;
-  min-height: 100vh;
-  padding-bottom: 30rem;
+  margin-top: 50rem;
+  flex-grow: 1;
+  margin-top: 50px;
+  padding-bottom: 2rem;
+  background-color: rgb(235, 234, 234);
+  height: 100%;
 }
 
 .register {
   background-color: #EBEAEA;
-  padding-top: 4rem;
   margin: auto;
 }
 .register__login {
@@ -820,7 +833,6 @@ body {
   background-color: #eeeeee;
   padding: 15px;
   box-shadow: 0px 1px 2px rgb(20, 20, 20);
-  margin-bottom: 5.1rem;
   margin-top: 1rem;
 }
 .register__text1 {
@@ -959,12 +971,11 @@ body {
 @media screen and (max-width: 600px) {
   .register .register {
     height: 100%;
-    padding-top: 5rem;
   }
   .register .register__form {
     padding-top: 1rem;
     margin-top: 1rem;
-    margin-bottom: 18rem;
+    margin-bottom: 2rem;
   }
   .register .headerCard {
     height: 100px;
@@ -1037,6 +1048,7 @@ body {
   }
   .main4 {
     padding-bottom: 3rem;
+    height: 30rem;
     height: 100%;
   }
   .form {
@@ -1168,7 +1180,9 @@ body {
   height: 15rem;
 }
 
-.product-form {
+.product-form-admin {
+  display: flex;
+  flex-direction: column;
   padding: 0rem 1rem 0rem 1rem;
   border: 0px solid salmon;
   margin: 1px;
@@ -1181,7 +1195,7 @@ body {
   border: 3px solid salmon; */
 }
 
-.product-form > div {
+.product-form-admin > div {
   margin-bottom: 1rem;
 }
 
