--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -1,4 +1,5 @@
 .footer {
+    // width: 100%;
     display: flex;
     flex-direction: column;
     background-color: $color-dark-gray;
@@ -6,7 +7,7 @@
     // padding-right:5rem;  
 
     width: 100%;
-    position: absolute;
+    // position: absolute;
     bottom: 0;
     padding-right: 5rem;
 
