--- a/scss/layout/_main.scss
+++ b/scss/layout/_main.scss
@@ -1,22 +1,34 @@
 .main {
+    // flex-grow: 1;
+    margin-top:50rem;
+    flex-grow: 1;
+    margin-top: 50px;
+    padding-bottom: 2rem;
+    // padding: 1.5rem 0;
+    background-color: rgb(235, 234, 234);
+    // width: fit-content;
+    
+    // padding-bottom:11rem;
+    // position: absolute;
+    // min-height: 100vh;
+    height: 100%;
+}
+body{
+
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between
+
+}
+
+.main4 {
     margin-top:50px;
     // padding: 1.5rem 0;
     background-color: rgb(235, 234, 234);
     // width: fit-content;
     
     padding-bottom:11rem;
-    // position: absolute;
-    min-height: 100vh;
-}
-
-.main4 {
-    // margin-top:50px;
-    // padding: 1.5rem 0;
-    background-color: rgb(235, 234, 234);
-
-    
-    
-    padding-bottom:0rem;
     // position: absolute;
     min-height: 100vh;
 }
