--- a/scss/pages/_contact.scss
+++ b/scss/pages/_contact.scss
@@ -1,13 +1,17 @@
 .main2 {
-    background-color: rgb(235, 234, 234);
-    // margin-top: 50px;
+    // flex-grow: 1;
+    margin-top:50rem;
+    flex-grow: 1;
+    margin-top: 50px;
+    padding-bottom: 2rem;
     // padding: 1.5rem 0;
-    // padding-bottom:11.3rem;
-    min-height: 100vh;
-
-    min-height: 100vh;
-
-    padding-top: 50px;
+    background-color: rgb(235, 234, 234);
+    // width: fit-content;
+    
+    // padding-bottom:11rem;
+    // position: absolute;
+    // min-height: 100vh;
+    height: 100%;
     
 
 }
@@ -117,12 +121,12 @@
     .Contact-Container{
         display: flex;
         flex-direction: column;
-        margin-bottom: 18rem;
+        margin-bottom: 10rem;
     }
     .main2 {
         background-color: rgb(235, 234, 234);
-        margin-top: 10px;
-        padding-bottom:3rem;
+        margin-top: 50px;
+        // padding-bottom:3rem;
 
     }
     .formContact { 
