--- a/views/admin-user.ejs
+++ b/views/admin-user.ejs
@@ -11,7 +11,7 @@
                 <div class="adminContainer">
                     <h1 class="header1">ADMINISTRACION DE USUARIOS</h1>
                     <div class="container">
-                        <form id="add-user" class="product-form" onsubmit="addUser(event)">
+                        <form id="add-user" class="product-form-admin" onsubmit="addUser(event)">
                             <div class="input-box">
                                 <label for="nameLabel">Nombre</label>
                                 <input type="text" name="fullName" id="nameLabel" required class="inputBox">
