--- a/views/admin-product.ejs
+++ b/views/admin-product.ejs
@@ -24,13 +24,13 @@
                             </div>
 
                             <div class="input-box">
-                                <label for="priceLabel">Precio</label>
+                                <label for="priceLabel" >Precio</label>
                                 <input type="number" name="price" id="priceLabel" required class="inputBox">
                             </div>
 
                             <div class="input-box">
-                                <label for="imgLabel">Imagen</label>
-                                <input type="url" name="image" id="imgLabel" required class="inputBox">
+                                <label for="imgLabel" class="inputBoxFile">Imagen</label>
+                                <input type="file" name="image" accept="image/*" id="imgLabel" required class="inputBoxImage">
                             </div>
                             <div class="input-box">
                                 <label for="descLabel">Detalle</label>
