--- a/views/index.ejs
+++ b/views/index.ejs
@@ -70,7 +70,7 @@
                 <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
                 <!-- <script src="/js/products.js"></script> -->
                 <!-- <script src="/js/product.js"></script> -->
-                <!-- <script src="/js/adminUser.js"></script> -->
+                <script src="/js/adminUser.js"></script>
                 <script src="/js//date.js"></script>
                 <script src="/js/header.js"></script>
                 <script src="/js/alert.js"></script>
