--- a/scss/pages/_admin-product.scss
+++ b/scss/pages/_admin-product.scss
@@ -21,6 +21,29 @@ body {
     border: none;
     height: 1.5rem;
 }
+.inputBoxImage{
+    width: 20rem;
+    border-radius:1rem;
+    border: none; 
+
+
+}
+.inputBoxFile {
+    border: 1px solid #ccc;
+    height: 1.5rem;
+    display: inline-block;
+    padding: 3px 12px;
+    cursor: pointer;
+    background-color:rgb(149, 161, 149);
+    border-radius:0.3rem;
+    width: 20rem;
+    border: none;
+}
+
+input[type="file"] {
+    display: none;
+}
+
 
 .inputBoxText{
     width: 20rem;
