admin product renderizados terminado

--- a/views/admin-product.ejs
+++ b/views/admin-product.ejs
@@ -30,18 +30,18 @@
 
                             <div class="input-box">
                                 <label for="imgLabel" class="inputBoxFile">Imagen</label>
-                                <input type="file" name="image" accept="image/*" id="imgLabel" required class="inputBoxImage">
+                                <input type="file" name="file" accept="image/*" id="imgLabel" required class="inputBoxImage">
                             </div>
                             <div class="input-box">
                                 <label for="descLabel">Detalle</label>
                                 <textarea name="detail" id="descLabel" rows="8" required class="inputBoxTextDetail">
                             </textarea>
                             </div>
-
+<!-- 
                             <div class="input-box">
                                 <label for="stockLabel">Stock</label>
                                 <input type="checkbox" name="stock" id="stockLabel">
-                            </div>
+                            </div> -->
 
 
                             <button type="submit" class="submit-btn-products" id="submit-btn">Cargar Producto</button>
@@ -88,7 +88,8 @@
                 <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
                 <script src="/js/alert.js"></script>
                 <script src="/js/header.js"></script>
-                <script src="/js/products.js"></script>
+                <!-- <script src="/js/products.js"></script> -->
+                <script src="/js/adminProucts.js"></script>
                 <script src="/js/isAdmin.js"></script>
                 <script src="/js/cartUpdate.js"></script>
                 <script src="/js/loginUserAvatar.js"></script>
