--- a/views/index.ejs
+++ b/views/index.ejs
@@ -64,6 +64,16 @@
                 </div>
 
                 <!-- =================JS=================  -->
+                <!-- <script>
+                    let orderUser = JSON.parse(localStorage.getItem("currentUser"))
+                    function showNotUser() {
+                        console.log("anda boton")
+                        if (!orderUser) {
+                            showAlert("Deberia lograrse para comprar", 'error')
+
+                        }
+                    }
+                </script> -->
 
                 <!-- AXIOS -->
                 <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
@@ -80,7 +90,9 @@
                 <script src="/js/filter.js"></script>
                 <script src="/js/btnBuy.js"></script>
                 <script src="/js/cartUpdate.js"></script>
-                <!-- <script src="/js//orderFinal.js"></script> -->
+                <script src="/js/orderFinal.js"></script>
+                <script src="/js/buttonNoLogin.js"></script>
+
     </body>
 
 </html>
