--- a/views/index.ejs
+++ b/views/index.ejs
@@ -90,7 +90,8 @@
                 <script src="/js/filter.js"></script>
                 <script src="/js/btnBuy.js"></script>
                 <script src="/js/cartUpdate.js"></script>
-                <script src="/js/orderFinal.js"></script>
+                <!-- <script src="/js/orderFinal.js"></script> -->
+                <script src="/js/orderFinalMongo.js"></script>
 
 
     </body>
