--- a/views/index.ejs
+++ b/views/index.ejs
@@ -85,13 +85,14 @@
                 <script src="/js/header.js"></script>
                 <script src="/js/alert.js"></script>
                 <script src="/js/indexProducts.js"></script>
-                <!-- <script src="/js/index.js"></script> -->
+                <!-- <script src="/js/index.js"></script> -->s
                 <script src="/js/loginUserAvatar.js"></script>
                 <script src="/js/filter.js"></script>
                 <script src="/js/btnBuy.js"></script>
                 <script src="/js/cartUpdate.js"></script>
                 <!-- <script src="/js/orderFinal.js"></script> -->
                 <script src="/js/orderFinalMongo.js"></script>
+                <!-- <script src="/js/orderFinalMongoDB.js"></script> -->
 
 
     </body>
