--- a/views/index.ejs
+++ b/views/index.ejs
@@ -91,8 +91,8 @@
                 <script src="/js/btnBuy.js"></script>
                 <script src="/js/cartUpdate.js"></script>
                 <!-- <script src="/js/orderFinal.js"></script> -->
-                <script src="/js/orderFinalMongo.js"></script>
-                <!-- <script src="/js/orderFinalMongoDB.js"></script> -->
+                <!-- <script src="/js/orderFinalMongo.js"></script> -->
+                <script src="/js/orderFinalMongoDB.js"></script>
 
 
     </body>
