--- a/views/order.ejs
+++ b/views/order.ejs
@@ -66,7 +66,8 @@
                 <script src="/js/loginUserAvatar.js"></script> 
                 <script src="/js/filter.js"></script>
                 <script src="/js/btnBuy.js"></script>
-                <script src="/js/orderFinal.js"></script>
+                <!-- <script src="/js/orderFinal.js"></script> -->
+                <script src="/js/orderFinalMongoDB.js"></script>
 
 
     </body>
