anda carga de productos

--- a/views/admin-product.ejs
+++ b/views/admin-product.ejs
@@ -89,7 +89,7 @@
                 <script src="/js/alert.js"></script>
                 <script src="/js/header.js"></script>
                 <!-- <script src="/js/products.js"></script> -->
-                <script src="/js/adminProucts.js"></script>
+                <script src="/js/adminProducts.js"></script>
                 <script src="/js/isAdmin.js"></script>
                 <script src="/js/cartUpdate.js"></script>
                 <script src="/js/loginUserAvatar.js"></script>
